--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)">
+          </select>
+            
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -49,7 +51,9 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
-
+  <script>
+    window.onload = populateDropdown;
+</script>
 </body>
 
 </html>
